adding wcf reference and codes.

--- a/Shipment/Web.config
+++ b/Shipment/Web.config
@@ -55,4 +55,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IFedExShippingService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:7061/api/FedExShippingService..svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IFedExShippingService"
+        contract="FedExAPIWCF.IFedExShippingService" name="BasicHttpBinding_IFedExShippingService" />
+    </client>
+  </system.serviceModel>
 </configuration>
