--- a/Shipment/Web.config
+++ b/Shipment/Web.config
@@ -1,70 +1,95 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請前往
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <configSections>
-    
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite1(1)-20191228220605;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebSite1(1)-20191228220605.mdf" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite1(1)-20191228220605;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebSite1(1)-20191228220605.mdf"/>
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0"/>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" defaultUrl="~/" />
+      <forms loginUrl="~/Account/Login" timeout="2880" defaultUrl="~/"/>
     </authentication>
-    
-    
-    
-    
-    
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="DotNetOpenAuth.Core" publicKeyToken="2780ccd10d57b246" />
-        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+        <assemblyIdentity name="DotNetOpenAuth.Core" publicKeyToken="2780ccd10d57b246"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="DotNetOpenAuth.AspNet" publicKeyToken="2780ccd10d57b246" />
-        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+        <assemblyIdentity name="DotNetOpenAuth.AspNet" publicKeyToken="2780ccd10d57b246"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
-  <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
-		     to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-		 --></runtime>
+    <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
+         to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+     -->
+  </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
   <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <!-- To avoid disclosing metadata information, set the value below to false before deployment -->
+          <serviceMetadata httpGetEnabled="true"/>
+          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
     <bindings>
+      <wsHttpBinding>
+        <binding name="custom_long_binding"
+                 openTimeout="00:10:00"
+                 closeTimeout="00:10:00"
+                 sendTimeout="00:10:00"
+                 receiveTimeout="00:10:00"
+                 maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="32"
+                 maxArrayLength="2147483647"
+                 maxStringContentLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        </binding>
+      </wsHttpBinding>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IFedExShippingService" />
+        <binding maxReceivedMessageSize="2147483647"
+                 maxBufferSize="2147483647"
+                 maxBufferPoolSize="2147483647">
+          <readerQuotas maxDepth="32"
+                        maxArrayLength="2147483647"
+                        maxStringContentLength="2147483647"/>
+        </binding>
       </basicHttpBinding>
     </bindings>
-    <client>
-      <endpoint address="http://localhost:7061/api/FedExShippingService..svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IFedExShippingService"
-        contract="FedExAPIWCF.IFedExShippingService" name="BasicHttpBinding_IFedExShippingService" />
-    </client>
   </system.serviceModel>
+  <appSettings>
+    <add key="ACCOUNTNUMBER" value="510087160" />
+    <add key="METERNUMBER" value="114010825" />
+    <add key="USERCREDENTIAL_KEY" value="GN7cSR93ryVrUhpv" />
+    <add key="USERCREDENTIAL_PASSWORD" value="OPEgfBPa3OuboYMWfoh40ZNZR" />
+    <add key="TEST_MODE" value="True" />
+  </appSettings>
 </configuration>
